construção do header
Construção do header menu, nav bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
   <title>Breath Natureal </title>
 </head>
 <body>
-  
+  <header class="header container">
+    <div class="header-logo">
+      <img src="img/plant1-header.png" alt="planta-logo">
+    </div>
+    <nav class="header-nav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Plants Type</a></li>
+        <li><a href="#">More</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="header-buscar">
+      <img src="img/search-interface-symbol 1.png" alt="buscar">
+      <img src="img/bag 1.png" alt="compra">
+      <img src="img/icon-menu-hamburguer.png" alt="">
+    </div>
+  </header>
 </body>
 </html>
