--- a/index.html
+++ b/index.html
@@ -28,5 +28,60 @@
       <img src="img/icon-menu-hamburguer.png" alt="">
     </div>
   </header>
+
+  <main class="main container">
+    <div>
+      <div class="main-info">
+        <div class="main-description">
+          <h1>Breath Natureal</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br> incididunt ut labore et dolore magna aliqua.
+          </p>
+          <div class="main-btn">
+            <button>Explore</button>
+            <div class="main-btn-info">
+              <img src="img/Ellipse1-main.png" alt="">
+              <p>Live Demo...</p>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+  
+      <div class="main-testemunha">
+        <div class="main-testemunha-container">
+          <div class="main-testemunha-card">
+            <img src="img/unsplash_1-main.png" alt="">
+            <div class="main-testemunha-card-info">
+              <p>alena Patel</p>
+              <img src="img/estrelas-main.png" alt="">
+            </div>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor<br> incididunt...
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="main-card-right">
+      <img src="img/Rectangle1-main.png" alt="">
+      <div class="main-card-right-img">
+        <img src="img/Rose Gold Feminine -main.png" alt="">
+        <div class="main-card-right-img-info">
+          <span>Trendy House Plant</span>
+          <strong>Calathea plant</strong>
+          <button>Buy Now</button>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <section>
+    <div>
+      <h2>Our Trendy plants</h2>
+      <img src="" alt="">
+    </div>
+  </section>
 </body>
 </html>
