criação da section
section

--- a/index.html
+++ b/index.html
@@ -77,10 +77,47 @@
     </div>
   </main>
 
-  <section>
-    <div>
+  <section class="section-plantas">
+    <div class="section-plantas-adereco">
+      <img  class="section-plantas-img1" src="img/adereco2-section.png" alt="">
       <h2>Our Trendy plants</h2>
-      <img src="" alt="">
+      <img  class="section-plantas-img2" src="img/adereco1-section.png" alt="">
+    </div>
+
+    <div class="section-plantas-card container">
+      <div class="section-plantas-card1">
+        <img src="img/Rectangle1-section.png" alt="">
+        <img class="section-plantas-card-rose" src="img/RoseGold-section.png" alt="">
+        <h3>For Small Decs Ai Plat</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing<br> elit, sed do eiusmod tempor incididunt ut labore et<br> dolore magna aliqua
+        </p>
+        <strong>Rs. 599/-</strong>
+        <div class="section-plantas-card1-info">
+          <button>Explore<img src="img/bag3-section.png" alt=""></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-plantas-card container">
+      <div class="section-plantas-card1">
+        <img src="img/Rectangle1-section.png" alt="">
+        <img class="section-plantas-card-feminine" src="img/Rose Gold Feminine -main.png" alt="">
+        <h3>For Small Decs Ai Plat</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing<br> elit, sed do eiusmod tempor incididunt ut labore et<br> dolore magna aliqua
+        </p>
+        <strong>Rs. 599/-</strong>
+        <div class="section-plantas-card1-info">
+          <button>Explore<img src="img/bag3-section.png" alt=""></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-plantas-adereco2">
+      <img  class="section-plantas-img1-2" src="img/adereco2-section.png" alt="">
+      <h2>Our Top Selling</h2>
+      <img  class="section-plantas-img2-2" src="img/adereco1-section.png" alt="">
     </div>
   </section>
 </body>
